--- a/multimed_fusion_fe/package.json
+++ b/multimed_fusion_fe/package.json
@@ -10,7 +10,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+
+    "framer-motion": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
